--- a/public/css/main.css
+++ b/public/css/main.css
@@ -417,9 +417,7 @@ textarea {
 
 .container-fluid {
   padding-right: 20px;
-  padding-right: 20px;
   padding-right: 2rem;
-  padding-left: 20px;
   padding-left: 20px;
   padding-left: 2rem;
 }
@@ -440,9 +438,7 @@ textarea {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin-right: -5px;
-  margin-right: -5px;
   margin-right: -0.5rem;
-  margin-left: -5px;
   margin-left: -5px;
   margin-left: -0.5rem;
 }
@@ -492,9 +488,7 @@ textarea {
   -ms-flex: 0 0 auto;
   flex: 0 0 auto;
   padding-right: 5px;
-  padding-right: 5px;
   padding-right: 0.5rem;
-  padding-left: 5px;
   padding-left: 5px;
   padding-left: 0.5rem;
 }
@@ -1810,7 +1804,6 @@ body:not(.home) main:after {
   color: #555;
   font-family: "Overpass Mono", monospace;
   font-size: 12px;
-  font-size: 12px;
   font-size: 1.2rem;
   font-weight: 600;
   text-transform: uppercase;
@@ -1912,7 +1905,7 @@ footer p {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 11;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1978,7 +1971,6 @@ nav ul, .nav ul {
   text-transform: uppercase;
   letter-spacing: 0.1em;
   font-size: 12px;
-  font-size: 12px;
   font-size: 1.2rem;
   font-weight: 600;
 }
@@ -2019,11 +2011,31 @@ nav ul, .nav ul {
   .burger {
     width: 30px;
   }
-  .burger svg .bar {
+  .burger .bar {
     fill: #f54768;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    -webkit-transform-origin: 50%;
+            transform-origin: 50%;
   }
-  .burger.is-active svg .bar {
+  .burger .bar:first-of-type, .burger .bar:nth-of-type(3) {
+    -webkit-transition-delay: 0.2s;
+            transition-delay: 0.2s;
+  }
+  .burger.is-active .bar {
     fill: #8bd76b;
+  }
+  .burger.is-active .bar:nth-of-type(2) {
+    -webkit-transform: scaleX(0);
+            transform: scaleX(0);
+  }
+  .burger.is-active .bar:first-of-type {
+    -webkit-transform: translateY(12px) rotate(45deg);
+            transform: translateY(12px) rotate(45deg);
+  }
+  .burger.is-active .bar:nth-of-type(3) {
+    -webkit-transform: translateY(-12px) rotate(-45deg);
+            transform: translateY(-12px) rotate(-45deg);
   }
 }
 @media (min-width: 800px) {
@@ -2173,7 +2185,6 @@ h1, h2, h3, h4, h5, h6,
   line-height: 1.3;
   padding: 0;
   margin: 30px 0 18.75px 0;
-  margin: 30px 0 18.75px 0;
   margin: 3rem 0 1.875rem 0;
 }
 
@@ -2185,7 +2196,6 @@ h4, h5,
 
 h4, h5, h6,
 .h4, .h5, .h6 {
-  letter-spacing: 1.5px;
   letter-spacing: 1.5px;
   letter-spacing: 0.15rem;
 }
@@ -2201,14 +2211,12 @@ h3:after, h4:after, h5:after,
 }
 
 h1, .h1 {
-  font-size: 80px;
-  font-size: 80px;
-  font-size: 8rem;
+  font-size: 40px;
+  font-size: 4rem;
   color: #f54768;
 }
 
 h2, .h2 {
-  font-size: 46px;
   font-size: 46px;
   font-size: 4.6rem;
   color: #8bd76b;
@@ -2216,13 +2224,11 @@ h2, .h2 {
 
 h3, .h3 {
   font-size: 36px;
-  font-size: 36px;
   font-size: 3.6rem;
   color: #07eff3;
 }
 
 h4, .h4 {
-  font-size: 25px;
   font-size: 25px;
   font-size: 2.5rem;
   color: #eef46e;
@@ -2230,12 +2236,10 @@ h4, .h4 {
 
 h5, .h5 {
   font-size: 20px;
-  font-size: 20px;
   font-size: 2rem;
 }
 
 h6, .h6 {
-  font-size: 18px;
   font-size: 18px;
   font-size: 1.8rem;
 }
@@ -2770,7 +2774,6 @@ button:hover:after, button:focus:after, button:active:after, .btn:hover:after, .
 
 .work-grid__item {
   margin-bottom: 5px;
-  margin-bottom: 5px;
   margin-bottom: 0.5rem;
 }
 
@@ -2784,7 +2787,6 @@ button:hover:after, button:focus:after, button:active:after, .btn:hover:after, .
   display: inline-block;
   margin: 0;
   padding: 1em 1em 2.5em 1em;
-  font-size: 20px;
   font-size: 20px;
   font-size: 2rem;
   line-height: 2;
@@ -2866,7 +2868,6 @@ button:hover:after, button:focus:after, button:active:after, .btn:hover:after, .
   overflow: hidden;
   background: #f54768;
   color: #000;
-  font-size: 18px;
   font-size: 18px;
   font-size: 1.8rem;
   margin: 0 0 1.5em 0;
@@ -3004,7 +3005,6 @@ body.home .badges {
   margin: 0;
   padding: 1em 1em 2.5em 1em;
   font-size: 20px;
-  font-size: 20px;
   font-size: 2rem;
   line-height: 2;
   letter-spacing: 0;
@@ -3046,7 +3046,7 @@ body.home .badges {
       -ms-flex-align: center;
           align-items: center;
   overflow: visible;
-  padding: 3em;
+  padding: 1.25em;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
@@ -3058,6 +3058,9 @@ body.home .badges {
   margin: 0 auto;
 }
 @media (min-width: 1200px) {
+  .badges__item {
+    padding: 3em;
+  }
   .badges__item:not(:last-of-type) {
     position: relative;
   }
@@ -3244,4 +3247,5 @@ body.home .badges {
     font-size: 3em;
   }
 }
+
 /*# sourceMappingURL=main.css.map */
