--- a/src/scss/_patterns/_navigation.scss
+++ b/src/scss/_patterns/_navigation.scss
@@ -78,12 +78,30 @@ nav, .nav {
 	.burger {
 		width: 30px;
 
-		svg .bar {
+		.bar {
 			fill: $pink;
+			transition: all 0.2s ease-in-out;
+			transform-origin: 50%;
+
+			&:first-of-type, &:nth-of-type(3) {
+				transition-delay: 0.2s;	
+			}
 		}
 
-		&.is-active svg .bar {
+		&.is-active .bar {
 			fill: $lime;
+
+			&:nth-of-type(2) {
+				transform: scaleX(0);
+			}
+
+			&:first-of-type {
+				transform: translateY(12px) rotate(45deg);
+			}
+
+			&:nth-of-type(3) {
+				transform: translateY(-12px) rotate(-45deg);
+			}
 		}
 	}
 }
