--- a/views/partials/badges.html
+++ b/views/partials/badges.html
@@ -3,22 +3,22 @@
 		<h3><span>I craft websites with:</span></h3>
 	</header>
 	<div class="row middle-xs">
-		<div class="col-sm-12 col-md-6 col-lg-3 badges__item">
+		<div class="col-xs-6 col-sm-3 badges__item">
 			<a href="https://www.javascript.com/" class="badges__item-link" rel="external">
 				<img src="/img/logos/javascript.svg" alt="JavaScript Logo">
 			</a>
 		</div>
-		<div class="col-sm-12 col-md-6 col-lg-3 badges__item">
+		<div class="col-xs-6 col-sm-3 badges__item">
 			<a href="http://sass-lang.com/" class="badges__item-link" rel="external">
 				<img src="/img/logos/sass.svg" alt="Sass Logo">
 			</a>
 		</div>
-		<div class="col-sm-12 col-md-6 col-lg-3 badges__item">
+		<div class="col-xs-6 col-sm-3 badges__item">
 			<a href="https://www.sketchapp.com/" class="badges__item-link" rel="external">
 				<img src="/img/logos/sketch.svg" alt="Sketch Logo">
 			</a>
 		</div>
-		<div class="col-sm-12 col-md-6 col-lg-3 badges__item">
+		<div class="col-xs-6 col-sm-3 badges__item">
 			<a href="https://secure.php.net/" class="badges__item-link" rel="external">
 				<img src="/img/logos/php.svg" alt="PHP Logo">
 			</a>
